[metadata]
name = glpk
description = PyGLPK, a Python module encapsulating GLPK.
long_description = The PyGLPK module gives one access to the functionality of the GNU Linear Programming Kit.
author = Thomas Finley
author_email = tfinley@gmail.com
url = https://github.com/bradfordboyle/pyglpk
maintainer = Bradford D. Boyle
maintainer_email = bradford.d.boyle@gmail.com
license = GPL
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: C
    Programming Language :: Python
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
setup_requires = setuptools_scm
